<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeActivity">

    <Button
        android:id="@+id/createRoomButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/create_room"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/joinRoomButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_arrow_forward_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/createRoomButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/MainText"
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/login"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <TextView
        android:id="@+id/roomName"
        style="@style/MainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/room_name"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/roomNameText"
        app:layout_constraintTop_toBottomOf="@+id/roomNameText" />

    <Button
        android:id="@+id/joinMyRoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/join"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/roomNameText" />

    <Button
        android:id="@+id/copyRoomLinkButton"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:drawableStart="@drawable/ic_content_copy_black_24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/roomLink"
        app:layout_constraintEnd_toStartOf="@+id/deleteRoomButton"
        app:layout_constraintTop_toTopOf="@+id/roomLink" />

    <Button
        android:id="@+id/deleteRoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/delete"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/roomLink"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/roomLink"
        style="@style/MainText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/your_room_link"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/roomLinkText"
        app:layout_constraintTop_toBottomOf="@+id/roomLinkText" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/user_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <TextView
        android:id="@+id/roomNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/your_room_name"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/roomLinkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/room_link"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/roomName"
        app:layout_constraintTop_toBottomOf="@+id/roomName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/join_by_link"
        app:layout_constraintStart_toStartOf="@+id/joinRoomButton"
        app:layout_constraintTop_toBottomOf="@+id/joinRoomButton" />

    <TextView
        android:id="@+id/roomInfoNotLoadedAttention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="Failed to load your room information"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />


</androidx.constraintlayout.widget.ConstraintLayout>