<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@+id/loginText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintStart_toStartOf="@+id/login" />

    <EditText
        android:id="@+id/login"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints="@string/login"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authErrorAttention"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/incorrect_data_attention"
        android:textColor="#FF0000"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authErrorAttention" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/new_user"
        app:layout_constraintEnd_toStartOf="@+id/signUpButton"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <TextView
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textColor="#03A9F4"
        app:layout_constraintEnd_toEndOf="@+id/signInButton"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

</androidx.constraintlayout.widget.ConstraintLayout>